<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Gwyn Bong Xiao Min.
  ~ All rights reserved.
  ~ Last Modified 4/6/20 8:25 PM
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nyp.edu.sg.pamateapp.EditProfileActivity">

    <LinearLayout
        android:id="@+id/layout_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgEditProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/elderly" />

        <Button
            android:id="@+id/btnEditImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00ffffff"
            android:enabled="false"
            android:text="@string/change_image"
            android:textColor="#1E90FF" />

        <LinearLayout
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_name_title" />

            <EditText
                android:id="@+id/txtEditName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/edit_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_gender_title" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <RadioButton
                    android:id="@+id/rbtnEditMale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:enabled="false"
                    android:text="@string/edit_male" />

                <RadioButton
                    android:id="@+id/rbtnEditFemale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:enabled="false"
                    android:text="@string/edit_female" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_date_of_birth_title" />

            <EditText
                android:id="@+id/txtEditBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/edit_birthday" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_height_title" />

            <EditText
                android:id="@+id/txtEditHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/edit_height" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_weight_title" />

            <EditText
                android:id="@+id/txtEditWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/edit_weight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_username_title" />

            <EditText
                android:id="@+id/txtEditUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/edit_username" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_email_title" />

            <EditText
                android:id="@+id/txtEditEmailAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/edit_email" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_password_title" />

            <EditText
                android:id="@+id/txtEditPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="true"
                android:inputType="textPassword"
                android:text="@string/edit_password" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_confirm_password_title" />

            <EditText
                android:id="@+id/txtEditConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="true"
                android:inputType="textPassword"
                android:text="@string/edit_confirm_password" />

            <Button
                android:id="@+id/btnSaveProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#025FD8"
                android:enabled="false"
                android:text="@string/save_profile"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
