<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Gwyn Bong Xiao Min.
  ~ All rights reserved.
  ~ Last Modified 4/6/20 8:25 PM
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nyp.edu.sg.pamateapp.CreateAccActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/pamate_plain" />

        <ScrollView
            android:id="@+id/layout_create_acc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txtCreateName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="#fff"
                    android:hint="@string/name"
                    android:textColor="#025FD8"
                    android:textColorHint="#025FD8"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtCreateDOB"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="#fff"
                    android:hint="@string/date_of_birth"
                    android:inputType="none"
                    android:textColor="#025FD8"
                    android:textColorHint="#025FD8"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/txtCreateHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="#fff"
                        android:hint="@string/height"
                        android:inputType="numberDecimal"
                        android:textColor="#025FD8"
                        android:textColorHint="#025FD8"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/txtCreateWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="#fff"
                        android:hint="@string/weight"
                        android:inputType="numberDecimal"
                        android:textColor="#025FD8"
                        android:textColorHint="#025FD8"
                        android:textSize="20sp" />
                </LinearLayout>


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <RadioButton
                        android:id="@+id/rbtnMale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:checked="true"
                        android:text="@string/male"
                        android:textColor="#025FD8"
                        android:textColorHighlight="#fff"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/rbtnFemale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/female"
                        android:textColor="#025FD8"
                        android:textColorHighlight="#fff"
                        android:textSize="20sp" />
                </RadioGroup>

                <EditText
                    android:id="@+id/txtCreateUsername"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="#fff"
                    android:drawableLeft="@drawable/ic_login_username"
                    android:drawableStart="@drawable/ic_login_username"
                    android:hint="@string/username"
                    android:textColor="#025FD8"
                    android:textColorHint="#025FD8"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtCreateEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="#fff"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:textColor="#025FD8"
                    android:textColorHint="#025FD8"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtCreatePassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="#fff"
                    android:drawableLeft="@drawable/ic_login_password"
                    android:drawableStart="@drawable/ic_login_password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="#025FD8"
                    android:textColorHint="#025FD8"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="#fff"
                    android:drawableLeft="@drawable/ic_login_password"
                    android:drawableStart="@drawable/ic_login_password"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="#025FD8"
                    android:textColorHint="#025FD8"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="#025FD8"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvLoginLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:clickable="true"
                        android:text="@string/login_link"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>


</LinearLayout>