<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Gwyn Bong Xiao Min.
  ~ All rights reserved.
  ~ Last Modified 4/6/20 8:25 PM
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imgRecentExercise"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginRight="10dp" />

    <TextView
        android:id="@+id/tvRecentExerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/imgRecentExercise"
        android:text="@string/recent_exercise"
        android:textColor="#025FD8"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvRecentExerciseDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRecentExerciseName"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/imgRecentExercise"
        android:text="@string/recent_exercise_duration"
        android:textColor="#C0C0C0"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvRecentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/recent_exercise_date"
        android:textColor="#555"
        android:textSize="20sp" />
</RelativeLayout>