<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Gwyn Bong Xiao Min.
  ~ All rights reserved.
  ~ Last Modified 4/6/20 8:25 PM
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nyp.edu.sg.pamateapp.LoginActivity">

    <ImageView
        android:id="@+id/imgLoginBackgrd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/pamate_bg"
        />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="#fff"
            android:drawableLeft="@drawable/ic_login_username"
            android:drawableStart="@drawable/ic_login_username"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:textColor="#025FD8"
            android:textColorHint="#025FD8"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="#fff"
            android:drawableLeft="@drawable/ic_login_password"
            android:drawableStart="@drawable/ic_login_password"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:textColor="#025FD8"
            android:textColorHint="#025FD8"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="bottom"
            android:background="#025FD8"
            android:textColor="#fff"
            android:text="@string/loginBtn"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCreateAccLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:clickable="true"
                android:text="@string/create_account_link"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
